test/files/neg/class-of-double-targs.scala
object Test {
  classOf[Int][Int]
}
